[project]
name = "comfyui-drmn"
description = "Data Research And Manipulators Nodes for Model Trainers, Artists, Designers and Animators. Captions, Visualizers, Text Manipulators"
version = "1.0.2"
license = "LICENSE"
dependencies = ["matplotlib", "wordcloud", "networkx", "pygraphviz", "pandas"]

[project.urls]
Repository = "https://github.com/daxcay/ComfyUI-DRMN"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "daxcay"
DisplayName = "ComfyUI-DRMN"
Icon = ""
