[project]
name = "comfyui-dataset"
description = "Data Research, Preparation And Manipulators Nodes for Model Trainers, Artists, Designers and Animators. It has Captions, Visualizers, Text Manipulators and so much more."
version = "1.0.2"
license = "LICENSE"
dependencies = ["matplotlib", "wordcloud", "networkx", "pygraphviz", "pandas"]

[project.urls]
Repository = "https://github.com/daxcay/ComfyUI-DataSet"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "daxcay"
DisplayName = "ComfyUI-DataSet"
Icon = "https://raw.githubusercontent.com/daxcay/ComfyUI-DataSet/master/web/assets/img/logo.jpg"